# projet/Node.js/api/openapi.yaml
@@ -39,6 +39,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Track'
                 x-content-type: application/json
+        "400":
+          description: Error getting tracks
       x-swagger-router-controller: Tracks
     post:
       tags:
@@ -54,6 +56,8 @@ paths:
       responses:
         "201":
           description: Track created successfully
+        "400":
+          description: Error creating track
       x-swagger-router-controller: Tracks
   /tracks/{id}:
     get:
@@ -99,6 +103,8 @@ paths:
       responses:
         "200":
           description: Track updated successfully
+        "400":
+          description: Error updating track
       x-swagger-router-controller: Tracks
     delete:
       tags:
